# nlboot

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  repo.maturity.yaml
.github/: copilot-instructions.md
AGENT_TASKS/: README.md  apple-silicon-adapter-dry-run.md  fix-rust-signature-canonicalization.md  gated-kexec-exec.md  prove-sbom-release-candidate.md  release-lock-sbom-provenance.md  rust-signature-parity.md  sourceos-boot-release-set-evolution.md  usable-mvp-fetch-kexec.md
docs/: APPLE_SILICON_M2_ADAPTER_CONTRACT.md  APPLE_SILICON_M2_ADAPTER_PLAN.md  DRY_RUN_OPERATOR_QUICKSTART.md  EXECUTION_BOUNDARY.md  LIFECYCLE_CONTRACTS.md  OPERATOR_TEST_RELEASE_HANDOFF.md  PLATFORM_ADAPTER_MATRIX.md  RELEASE_AND_INSTALL.md  RELEASE_CANDIDATE_PROOF.md  RELEASE_NOTES_NLBOOT_CLIENT_V0_1_0_OPERATOR_TEST.md  RELEASE_READINESS_CHECKLIST.md  RUST_STANCE_AND_MATURITY.md  SBOM_RELEASE_CANDIDATE_PROOF.md  USABLE_MVP_GAP.md
examples/: apple_silicon_m2_adapter_plan.recovery.json  artifact_map.recovery.json  boot_release_set.m2_demo_recovery.json  enrollment_token.recovery.json  lifecycle_state_record.m2_demo_signed.json  release_set.m2_demo.json  signed_boot_manifest.recovery.json  trusted_keys.recovery.json
fixtures/: boot-evidence.valid.json
rust/: README.md
rust/nlboot-client/: Cargo.toml
rust/nlboot-client/src/: main.rs
rust/nlboot-client/tests/: fixture_plan.rs
schemas/: boot-evidence.schema.json  boot-release-set.schema.v0.1.json  device-claim.schema.v0.1.json  lifecycle-state-record.schema.v0.1.json  release-set.schema.v0.1.json
src/nlboot/: cli.py  (+5 more)
tests/: test_cli_examples.py  test_device.py  test_enrollment.py  test_protocol.py  test_verify.py
(+13 files in other folders)
