[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nlboot"
version = "0.1.0"
description = "SourceOS safe network/live/recovery boot protocol reference implementation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SourceOS / SociOS" }]
dependencies = []

[project.scripts]
nlboot-plan = "nlboot.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
