[package]
name = "nlboot-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Portable Rust client for NLBoot safe boot/recovery planning"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
