[package]
name = "nlboot-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Portable Rust client for NLBoot safe boot/recovery planning"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
libc = "0.2"
pem = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
